# Lock_daemon

./: .gitignore  CMakeLists.txt  README.md  build_project.sh
rootfs/etc/systemd/system/: lock_daemon.service
src/: main.cpp
src/lock/: Deadlock.cpp  Deadlock.hpp
src/utils/: MqttWrapper.hpp  mqtt_client.hpp
